Customize to me

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                I was born and raised in Hawesville, KY. My mom's great x3 grandparents moved to this area from Ireland and the majoirty of my family remains here. I live within 4 minutes of my mom, grandparents, first, second, and third cousins. 
             </div>
             <div class="div-2">
-                Div 2
+                My passion: I love beautiful things! I know that sounds generic, but I love artwork, music, beautiful towns, patterns, etc. I genuninely find joy in soaking in the beautiful and interesting things around me.
             </div>
             <div class="div-3">
-                Div 3
+               A fun fact: I did a month of my student teaching for Elementary Education in Ireland. While there I travled to London for a second time - which is one of my favorite places. I really love Ireland too. 
             </div>
         </section>    
 
