--- a/index.html
+++ b/index.html
@@ -21,16 +21,25 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
-                I was born and raised in Hawesville, KY. My mom's great x3 grandparents moved to this area from Ireland and the majoirty of my family remains here. I live within 4 minutes of my mom, grandparents, first, second, and third cousins. 
+        <section class="flex-container">
+            <header>
+                <h1>Hello! I'm Shayla.</h1>
+            </header>
+            <main>
+                <p> I am learning Front End Development. I enjoy learning new things, traveling, solving problems, and hanging out with my 5 year old. </p>
+            </main>
+            <div id="div-1" class="flex-items">
+                <p>I was born and raised in Hawesville, KY. My mom's great x3 grandparents moved to this area from Ireland and the majoirty of my family remains here. I live within 4 minutes of my mom, grandparents, first, second, and third cousins. </p>
             </div>
-            <div class="div-2">
-                My passion: I love beautiful things! I know that sounds generic, but I love artwork, music, beautiful towns, patterns, etc. I genuninely find joy in soaking in the beautiful and interesting things around me.
+            <div id="div-2" class="flex-items">
+                <p>My passion: I love beautiful things! I know that sounds generic, but I love artwork, music, beautiful towns, patterns, etc. I genuninely find joy in soaking in the beautiful and interesting things around me.</p>
             </div>
-            <div class="div-3">
-               A fun fact: I did a month of my student teaching for Elementary Education in Ireland. While there I travled to London for a second time - which is one of my favorite places. I really love Ireland too. 
+            <div id="div-3" class="flex-items">
+                <p>A fun fact: I did a month of my student teaching for Elementary Education in Ireland. While there I travled to London for a second time - which is one of my favorite places. I really love Ireland too. </p>
             </div>
+            <footer>
+                <p>Welcome!</p>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
